--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -54,6 +54,11 @@
                       <span>Find owners</span>
                   </li>
 
+                  <li th:replace="::menuItem ('/owners.html','ownerslist','list of owners','th-list','List of Owners')">
+                      <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+                      <span>Find owners</span>
+                  </li>
+
                   <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                       <span>Veterinarians</span>
