[#29] Fixed text of the menu item

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -56,7 +56,7 @@
 
                   <li th:replace="::menuItem ('/owners.html','ownerslist','list of owners','th-list','List of Owners')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-                      <span>Find owners</span>
+                      <span>List of Owners</span>
                   </li>
 
                   <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
