[#29] Fixed some layout issues

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -54,7 +54,7 @@
                       <span>Find owners</span>
                   </li>
 
-                  <li th:replace="::menuItem ('/owners.html','ownerslist','list of owners','th-list','List of Owners')">
+                  <li th:replace="::menuItem ('/owners.html','allOwners','list of owners','th-list','List of Owners')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                       <span>List of Owners</span>
                   </li>
