--- a/src/main/resources/templates/owners/ownersList.html
+++ b/src/main/resources/templates/owners/ownersList.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="${isOptionListOfAll} ? ~{fragments/layout :: layout (~{::body},'allOwners')} : ~{fragments/layout :: layout (~{::body},'owners')}">
 
   <body>
 
