--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -48,16 +48,20 @@
                       <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
                       <span>Home</span>
                   </li>
-  
-                  <li th:if="toggles[1] == true" th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
-                      <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                      <span>Find owners</span>
-                  </li>
 
-                  <li th:if="toggles[0] == true" th:replace="::menuItem ('/owners.html','allOwners','list of owners','th-list','List of Owners')">
-                      <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
-                      <span>List of Owners</span>
-                  </li>
+                  <div th:if="${toggles[0] == true}">
+                      <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
+                          <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                          <span>Find owners</span>
+                      </li>
+                  </div>
+
+                <div th:if="${toggles[0] == true}">
+                      <li th:replace="::menuItem ('/owners.html','allOwners','list of owners','th-list','List of Owners')">
+                          <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+                          <span>List of Owners</span>
+                      </li>
+                </div>
 
                   <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
