[#29] Added "Add Owner" button on the list of owner view

--- a/src/main/resources/templates/owners/ownersList.html
+++ b/src/main/resources/templates/owners/ownersList.html
@@ -28,6 +28,7 @@
           </tr>
         </tbody>
     </table>
-
+    <br />
+    <a class="btn btn-default" th:href="@{/owners/new}">Add Owner</a>
   </body>
 </html>
