--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -49,19 +49,19 @@
                       <span>Home</span>
                   </li>
 
-                  <div th:if="${toggles[0] == true}">
+                  <th:block th:if="${toggles[0] == true}">
                       <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
                           <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
                           <span>Find owners</span>
                       </li>
-                  </div>
+                  </th:block>
 
-                <div th:if="${toggles[1] == true}">
+                <th:block th:if="${toggles[1] == true}">
                       <li th:replace="::menuItem ('/owners.html','allOwners','list of owners','th-list','List of Owners')">
                           <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                           <span>List of Owners</span>
                       </li>
-                </div>
+                </th:block>
 
                   <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
