started with logs

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -62,6 +62,12 @@
                           <span>List of Owners</span>
                       </li>
                 </th:block>
+                  <th:block th:if="${toggles[2] == true}">
+                      <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
+                          <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+                          <span>Find By Telephone</span>
+                      </li>
+                  </th:block>
 
                   <li th:replace="::menuItem ('/vets.html','vets','veterinarians','th-list','Veterinarians')">
                       <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
