#31 Required changes for PR

--- a/src/main/resources/templates/fragments/layout.html
+++ b/src/main/resources/templates/fragments/layout.html
@@ -63,7 +63,7 @@
                       </li>
                 </th:block>
 				
-				<th:block th:if="${toggles[2] == true}">
+				<th:block th:if="${toggles[0] == true || toggles[2] == true || toggles[3] == true}">
                       <li th:replace="::menuItem ('/owners/find','owners','find owners','search','Find owners')">
                           <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
                           <span>Find By Location</span>
