--- a/src/main/resources/templates/owners/findOwners.html
+++ b/src/main/resources/templates/owners/findOwners.html
@@ -27,7 +27,7 @@
       </div>
     </div>
 
-      <form th:object="${owner}" th:action="@{/owners}" method="get"
+      <form th:block th:if="${toggles[4] == true}" th:object="${owner}" th:action="@{/owners}" method="get"
             class="form-horizontal" id="search-owner-form">
           <div class="form-group">
               <div class="control-group" id="TelephoneGroup">
